namespace Assets.Scripts.Constants.Hero
{
    public static class HeroAnimatorConstants
    {
        public const string AttackParameter = "Attack";
        public const string IsDeadParameter = "IsDead";
        public const string IsDizzyParameter = "IsDizzy";
        public const string IsWalkingParameter = "IsWalking";
        public const string IsWinningParameter = "IsWinning";
    }
}
